<resources xmlns:tools="http://schemas.android.com/tools">

    //nombres
    <string name="app_name">PH en linea APP</string>
    <string name="enterprise_name">Estructura IST S.A.S</string>

    //palabras clave
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="requerido">Requerido</string>
    <string name="continuar">CONTINUAR</string>
    <string name="todo">TODO</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_periodo_home">PERIODO DE FACTURACIÓN:</string>
    <string name="title_inf_admin">Informacion del Administrador:</string>
    <string name="title_contacto">Contacto: </string>
    <string name="empty">-</string>
    <string name="title_telefono">Teléfono:</string>
    <string name="title_correo">Correo:</string>
    <string name="title_fecha_periodo">Fecha periodo facturación</string>
    <string name="home">Inicio</string>
    <string name="update">Actualizar datos</string>
    <string name="profile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="another_options">Otras opciones</string>
    <string name="log_out">Cerrar sección</string>
    <string name="call_porteria">Llamar a portería</string>
    <string name="call_admin">Llamar a la administración</string>
    <string name="events">Eventos</string>
    <string name="remember_me">Recuérdame</string>
    <string name="see_details">VER DETALLES</string>
    <string name="pagar_ver_factura">PAGAR / VER FACTURA</string>
    <string name="certificados_estado_recibos">CERTIFICADOS / ESTADO / RECIBOS</string>
    <string name="mensajes_pqrsf">MENSAJES / PQRSF</string>
    <string name="boletines_de_la_administraci_n">BOLETINES DE LA ADMINISTRACIÓN</string>
    <string name="informes_asamblea">INFORMES ASAMBLEA</string>
    <string name="encuestas_y_votaciones">ENCUESTAS Y VOTACIONES</string>
    <string name="pague_su_factura_aqui">PAGUE SU FACTURA AQUI</string>
    <string name="l_neas_de_soporte_para_pago">Líneas de soporte para pago:</string>
    <string name="txt_lineas_de_soporte_para_pago" tools:ignore="TypographyDashes">Línea cel Fija: (57–4) 322 20 60 – 310 370 31 51 \nLínea gratuita: 01 - 8000 - 517 - 510</string>
    <string name="preguntas_frecuentes_pagos_pse"><u>Preguntas frecuentes pagos PSE</u></string>
    <string name="pt_debe_esperar_pse">Debes de esperar a que se genere la factura del mes actual para poder hacer el pago por PSE</string>
    <string name="historial_de_pagos_pse">HISTORIAL DE PAGOS PSE</string>
    <string name="anio">Año:</string>
    <string name="mes">Mes:</string>
    <string name="periodo">Periodo:</string>
    <string name="economia">Economía</string>
    <string name="informes">Informes</string>
    <string name="contacto">Contacto</string>
    <string name="social">Social</string>
    <string name="publicidad_notificaciones">Publicidad / Notificaciones</string>
    <string name="download">Descargar</string>
    <string name="close">Cerrar</string>
    <string name="next">Siguiente</string>
    <string name="back">Anterior</string>
</resources>