<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:src="http://schemas.android.com/apk/res-auto"
    tools:context=".MVP.Views.Activitys.ControlFacturasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00A65A"
            android:paddingVertical="10dp"
            android:text="@string/pagar_ver_factura"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:text="DATOS PARA PAGO DE ... DEL ...."
            android:textAlignment="center"
            android:textColor="@color/gray_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/pt_debe_esperar_pse"
            android:textAlignment="center"
            android:textColor="@color/red_dark"
            android:textSize="14sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:background="@drawable/background_blue_button"
            android:backgroundTint="@null"
            android:elevation="10dp"
            android:shadowColor="@color/gray_dark"
            android:text="@string/pague_su_factura_aqui"
            src:icon="@drawable/ic_add" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="8dp"
            android:text="@string/l_neas_de_soporte_para_pago"
            android:textAlignment="textStart"
            android:textColor="@color/gray_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:text="@string/txt_lineas_de_soporte_para_pago"
            android:textAlignment="textStart"
            android:textColor="@color/gray_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="30dp"
            android:text="@string/preguntas_frecuentes_pagos_pse"
            android:textAlignment="textStart"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btn_ver_facturas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="30dp"
            android:background="@drawable/background_blue_button"
            android:backgroundTint="@null"
            android:elevation="10dp"
            android:shadowColor="@color/gray_dark"
            android:text="@string/historial_de_pagos_pse"
            src:icon="@drawable/ic_add" />

    </LinearLayout>
</ScrollView>