<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Activitys.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:src="@drawable/login_image_background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/container_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        android:background="@drawable/background_login"
        android:layout_centerInParent="true">

        <TabHost android:id="@android:id/tabhost"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TabWidget android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@android:id/tabs"/>

                <FrameLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@android:id/tabcontent" >

                    <LinearLayout android:id="@+id/Ingreso"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/txtUser"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="18dp"
                            android:layout_marginVertical="12dp"
                            app:startIconDrawable="@drawable/ic_email"
                            app:helperText="@string/requerido"
                            app:endIconMode="clear_text"
                            android:hint="@string/usuario"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:inputType="text"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/txtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="18dp"
                            android:layout_marginVertical="12dp"
                            app:startIconDrawable="@drawable/ic_lock"
                            app:helperText="@string/requerido"
                            app:endIconMode="password_toggle"
                            android:hint="@string/contraseña"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:inputType="textPassword"/>

                        </com.google.android.material.textfield.TextInputLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btnContinuar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:backgroundTint="@null"
                                android:textColor="@color/white"
                                android:layout_centerHorizontal="true"
                                android:textSize="14sp"
                                android:text="@string/continuar"
                                android:layout_marginVertical="20dp"
                                android:background="@drawable/background_blue_button"/>
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout android:id="@+id/Registro"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView android:id="@+id/textView2"
                            android:text="@string/enterprise_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </TabHost>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_form"
        android:layout_above="@+id/enterprise_name"
        android:visibility="gone"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/enterprise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:text="@string/enterprise_name"
        android:textAlignment="center"
        android:layout_marginVertical="30dp"/>
</RelativeLayout>